@@ -27,6 +27,8 @@ Not yet released.
 - #29: replace custom ``jsonify_status_code`` function with built-in support
   for ``return jsonify(), status_code`` style return statements (new in Flask
   0.9).
+- #51: Use `mimerender <http://mimerender.readthedocs.org>`_ to render
+  dictionaries to JSON format.
 - #256: makes search parameters available to postprocessors for
   :http:method:`get` and :http:method:`patch` requests that access multiple
   resources.
